--- a/src/app/angular_components/src/angular-register/angular.json
+++ b/src/app/angular_components/src/angular-register/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-register",
+            "outputPath": "../../dist/angular-register",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
