--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/vasMil/Covid19-Tracing#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "leaflet": "^1.7.1"
   }
 }
