--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3"
   }
