--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.9.1",
     "jquery": "^3.6.1",
     "leaflet": "^1.7.1"
   }
